# rserpooldemo

./: .travis.yml  CMakeLists.txt  ChangeLog  README  README.md  bootstrap  make-ppa  packaging.conf  prepare-demo  rserpooldemo.kdevelop  rserpooldemo.lsm
.github/workflows/: linux-ubuntu.yml  multiarch.yml  packaging.yml
background/: CMakeLists.txt  EN-Logo-RSerPoolProject2-GreenBackground.dia  Logo-RSPLIB.dia  Logo-RSPLIB.text  Make-Background  RSerPoolDemo-Background.txt  Settings.input  Website.text  build-caption  build-overlay  dia2pdf  make-caption  make-overlay  pdf2png
background/Input/: Background.txt
background/dia/: Logo-RSPLIB.dia  dia2pdf  pdf2png
background/gimp-scripts/: Make-Background  Make-Caption  Make-Cloth  Make-Logo  Make-Mosaic  Make-OldPhoto  Make-Painting  Resize-with-Cropping  Test-Gimp
ci/: install  run-test
debian/: changelog  control  copyright  rserpooldemo-desktop.examples  rserpooldemo-desktop.install  rserpooldemo-desktop.postinst  rserpooldemo-desktop.postrm  rserpooldemo-management.install  rserpooldemo-management.postrm  rserpooldemo-scenario-cfgfiles.install  rserpooldemo-tool.install  rserpooldemo-tool.manpages  rules  watch
debian/source/: lintian-overrides
debian/upstream/: metadata
demo/: RSerPool Demo PUs.desktop  RSerPool Demo.desktop  hosts
desktop/: RSerPool Demo.desktop
freebsd/rserpooldemo/: Makefile  distinfo  pkg-descr  pkg-plist
grub/: 05_rserpooldemo_desktop_theme  45_rserpooldemo_desktop_theme  CMakeLists.txt
rpm/: rserpooldemo.spec
src/: CMakeLists.txt  ComponentControl  LocalScenario-StartAll  LocalScenario-StopAll  LocalScenario.config  PlanetLab-User.config  PlanetLabScenario-StartAll  PlanetLabScenario.config  RemoteScenario-User.config  RunProgram  canvas.cc  canvas.cpp  canvas.h  canvasnode.cc  canvasnode.cpp  canvasnode.h  canvasrsernode.cpp  canvasrsernode.h  canvasview.cc  canvasview.cpp  canvasview.h  componentstatuspackets.h  configuration.cc  configuration.cpp  configuration.h  contextmenuconfig.cc  contextmenuconfig.cpp  contextmenuconfig.h  csplistener.cc  csplistener.h  dummy-interface  globecom-labtop1  local-setup.xml  mainwidget.cc  mainwidget.cpp  mainwidget.h  networklistener.cc  networklistener.cpp  networklistener.h  node.cc  (+29 more)
src/background/: CMakeLists.txt  Logo-RSPLIB.text  Settings.input  Subtitle.text  Title.text  Website.text  build-caption  build-overlay  test-overlay
src/background/dia/: Logo-RSPLIB.dia  RSerPool-Handlespace.shape  dia2pdf  make-png  pdf2png
src/background/gimp-scripts/: Make-Background  Make-Caption  Make-Cloth  Make-Mosaic  Make-OldPhoto  Make-Painting  Make-Text  Resize-with-Cropping  Test-Gimp  batch.py  gs-bumpmap  gs-caption  gs-clothify  gs-glossytext  gs-mosaic  gs-oilify  gs-oldphoto  gs-resize-with-cropping  gs-test-gimp  run-batch  run-tests
src/graphics/: CMakeLists.txt  PoolElementActive3.dia  PoolElementInactive2.dia  PoolElementInactive3.dia  PoolElementInactive5.dia  dia2pdf
src/grub/: 45_rserpooldemo_desktop_theme  CMakeLists.txt
src/local-scenario/: CMakeLists.txt  ComponentControl  LocalScenario-StartAll  LocalScenario-StopAll  LocalScenario.config  RunProgram  local-setup.xml
src/nornet-mec-scenario/: CMakeLists.txt  ComponentControl  LocalScenario-StartAll  LocalScenario-StopAll  LocalScenario.config  MEC-User.config  NorNet-MEC-Scenario.dia  PMC-User.config  RemoteComponentControl  RemoteScenario-StartAll  RemoteScenario-StopAll  RunProgram  dia2pdf  make-background  nornet-mec-setup-localonly.xml  nornet-mec-setup.xml
src/pictures/: PoolElementActive6.dia
src/planetlab-scenario/: PlanetLabScenario-Demo1  PlanetLabScenario-StartAll  PlanetLabScenario-StopAll  PlanetLabScenario.config  planetlab-installer  planetlab-setup.xml
src/remote-scenario/: RemoteComponentControl  RemoteScenario-StartAll  RemoteScenario-StopAll  RemoteScenario-User.config  remote-poolusers.xml  remote-setup.xml
src/storage/: prepare-demo
src/system-info.d/: 30-rsplib
src/system-maintenance.d/: 30-rsplib
templates/: h
video/: ogg2avi
